<resources>
    <string name="app_name">Investments Equality Kotlin</string>
    <string name="action_settings">Configurações</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_wallet_list">WalletListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="last_update">Ultima atualização ás %s</string>
    <string name="action_delete_all">Deletar todos</string>
    <string name="add_stock_exchange">Adicionar ação</string>
    <string name="first_wallet">Primeira carteira</string>
    <string name="api_error">Erro na API: %s</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>
    <string name="informe_stock_name">Informe o nome da ação</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>